chore: solve mobile browser full-bleed

--- a/index.css
+++ b/index.css
@@ -4,12 +4,18 @@ html, body {
     width: 100%;
     height: 100%;
     overflow: hidden;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
 
     -webkit-tap-highlight-color: transparent;
 }
 
 body {
-    margin: 0; }
+    margin: 0;
+}
 
 canvas {
     width: 100%;
